Eliminar ManageListsPanel y cambiado .toList()