@@ -5,6 +5,7 @@ import um.tds.projects.appvideo.backend.Playlist;
 import java.awt.Color;
 import java.awt.Dimension;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import javax.swing.Box;
 import javax.swing.BoxLayout;
@@ -21,7 +22,7 @@ public class PlaylistsList extends JPanel {
 	public PlaylistsList(MainWindow mainWindow, List<Playlist> playlists) {
 		this.mainWindow = mainWindow;
 		this.playlists = playlists;
-		this.entries   = playlists.stream().map( p -> new PlaylistListEntry(mainWindow, p) ).toList();
+		this.entries   = playlists.stream().map( p -> new PlaylistListEntry(mainWindow, p) ).collect(Collectors.toList());
 		
 		setBackground(Constants.BACKGROUND_COLOR);
 		setLayout(new BoxLayout(this, BoxLayout.Y_AXIS));
